{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 33,
  "lineage": "dae7d13a-ddf4-db7b-7098-25887338847b",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:406951616480:network-acl/acl-0ca19af6ead6183b5",
            "default_network_acl_id": "acl-0ca19af6ead6183b5",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0ca19af6ead6183b5",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "406951616480",
            "subnet_ids": [
              "subnet-024dc68697c6aabbe",
              "subnet-0260949cee50b5196",
              "subnet-02b82cca4b2178f54",
              "subnet-05a8afa32fc346d01",
              "subnet-05f78cb39cb47ec39",
              "subnet-0b44d22f2087c94ab"
            ],
            "tags": {
              "Name": "vpc-live-default"
            },
            "tags_all": {
              "Name": "vpc-live-default"
            },
            "vpc_id": "vpc-09d9a016647d2814c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:406951616480:route-table/rtb-06bfac3e385621c64",
            "default_route_table_id": "rtb-06bfac3e385621c64",
            "id": "rtb-06bfac3e385621c64",
            "owner_id": "406951616480",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "vpc-live-default"
            },
            "tags_all": {
              "Name": "vpc-live-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-09d9a016647d2814c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:406951616480:security-group/sg-036d6537b2e25f3f6",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-036d6537b2e25f3f6",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "406951616480",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "vpc-live-default"
            },
            "tags_all": {
              "Name": "vpc-live-default"
            },
            "vpc_id": "vpc-09d9a016647d2814c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-039623a8d54bc21b5",
            "arn": "arn:aws:ec2:us-east-1:406951616480:elastic-ip/eipalloc-039623a8d54bc21b5",
            "domain": "vpc",
            "id": "eipalloc-039623a8d54bc21b5",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-212-144-49.compute-1.amazonaws.com",
            "public_ip": "3.212.144.49",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "vpc-live-us-east-1a"
            },
            "tags_all": {
              "Name": "vpc-live-us-east-1a"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0636ac57733e7c251",
            "arn": "arn:aws:ec2:us-east-1:406951616480:elastic-ip/eipalloc-0636ac57733e7c251",
            "domain": "vpc",
            "id": "eipalloc-0636ac57733e7c251",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-214-137-0.compute-1.amazonaws.com",
            "public_ip": "3.214.137.0",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "vpc-live-us-east-1b"
            },
            "tags_all": {
              "Name": "vpc-live-us-east-1b"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-081bc845a60d0750b",
            "arn": "arn:aws:ec2:us-east-1:406951616480:elastic-ip/eipalloc-081bc845a60d0750b",
            "domain": "vpc",
            "id": "eipalloc-081bc845a60d0750b",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-6-86-1.compute-1.amazonaws.com",
            "public_ip": "52.6.86.1",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "vpc-live-us-east-1c"
            },
            "tags_all": {
              "Name": "vpc-live-us-east-1c"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:406951616480:internet-gateway/igw-02ac65d54cc6f4205",
            "id": "igw-02ac65d54cc6f4205",
            "owner_id": "406951616480",
            "tags": {
              "Name": "vpc-live"
            },
            "tags_all": {
              "Name": "vpc-live"
            },
            "vpc_id": "vpc-09d9a016647d2814c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-039623a8d54bc21b5",
            "association_id": "eipassoc-04478946b3ed78731",
            "connectivity_type": "public",
            "id": "nat-0124c8f212b56940b",
            "network_interface_id": "eni-00c2f9d84837bd6c0",
            "private_ip": "10.0.101.203",
            "public_ip": "3.212.144.49",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-024dc68697c6aabbe",
            "tags": {
              "Name": "vpc-live-us-east-1a"
            },
            "tags_all": {
              "Name": "vpc-live-us-east-1a"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0636ac57733e7c251",
            "association_id": "eipassoc-04d6fd8e7b2270920",
            "connectivity_type": "public",
            "id": "nat-0f0548aafbce43340",
            "network_interface_id": "eni-0c9fb8ee0683db5f1",
            "private_ip": "10.0.102.107",
            "public_ip": "3.214.137.0",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-02b82cca4b2178f54",
            "tags": {
              "Name": "vpc-live-us-east-1b"
            },
            "tags_all": {
              "Name": "vpc-live-us-east-1b"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-081bc845a60d0750b",
            "association_id": "eipassoc-0af92aeb1909e87e0",
            "connectivity_type": "public",
            "id": "nat-02f718fca2ffa7d8e",
            "network_interface_id": "eni-0dfe5a76f68361f97",
            "private_ip": "10.0.103.138",
            "public_ip": "52.6.86.1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0260949cee50b5196",
            "tags": {
              "Name": "vpc-live-us-east-1c"
            },
            "tags_all": {
              "Name": "vpc-live-us-east-1c"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0c87e87e0d0cb4d521080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0124c8f212b56940b",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c87e87e0d0cb4d52",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-095e98eb576acd6091080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0f0548aafbce43340",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-095e98eb576acd609",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0e3888af0cb92dabb1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-02f718fca2ffa7d8e",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e3888af0cb92dabb",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-02ac65d54cc6f4205",
            "id": "r-rtb-0309ae71e15e5575d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0309ae71e15e5575d",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:406951616480:route-table/rtb-0c87e87e0d0cb4d52",
            "id": "rtb-0c87e87e0d0cb4d52",
            "owner_id": "406951616480",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "vpc-live-private-us-east-1a"
            },
            "tags_all": {
              "Name": "vpc-live-private-us-east-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-09d9a016647d2814c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:406951616480:route-table/rtb-095e98eb576acd609",
            "id": "rtb-095e98eb576acd609",
            "owner_id": "406951616480",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "vpc-live-private-us-east-1b"
            },
            "tags_all": {
              "Name": "vpc-live-private-us-east-1b"
            },
            "timeouts": null,
            "vpc_id": "vpc-09d9a016647d2814c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:406951616480:route-table/rtb-0e3888af0cb92dabb",
            "id": "rtb-0e3888af0cb92dabb",
            "owner_id": "406951616480",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "vpc-live-private-us-east-1c"
            },
            "tags_all": {
              "Name": "vpc-live-private-us-east-1c"
            },
            "timeouts": null,
            "vpc_id": "vpc-09d9a016647d2814c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:406951616480:route-table/rtb-0309ae71e15e5575d",
            "id": "rtb-0309ae71e15e5575d",
            "owner_id": "406951616480",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "vpc-live-public"
            },
            "tags_all": {
              "Name": "vpc-live-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-09d9a016647d2814c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-070a01e3be6aca8d9",
            "route_table_id": "rtb-0c87e87e0d0cb4d52",
            "subnet_id": "subnet-05f78cb39cb47ec39"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-081800ca0a847f5e0",
            "route_table_id": "rtb-095e98eb576acd609",
            "subnet_id": "subnet-05a8afa32fc346d01"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-079fa81cda7546b9b",
            "route_table_id": "rtb-0e3888af0cb92dabb",
            "subnet_id": "subnet-0b44d22f2087c94ab"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cb56c4955d5aca14",
            "route_table_id": "rtb-0309ae71e15e5575d",
            "subnet_id": "subnet-024dc68697c6aabbe"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0878c8370661b0699",
            "route_table_id": "rtb-0309ae71e15e5575d",
            "subnet_id": "subnet-02b82cca4b2178f54"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0304aa9a4a794b8ac",
            "route_table_id": "rtb-0309ae71e15e5575d",
            "subnet_id": "subnet-0260949cee50b5196"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:406951616480:subnet/subnet-05f78cb39cb47ec39",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05f78cb39cb47ec39",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "406951616480",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-live-private-us-east-1a"
            },
            "tags_all": {
              "Name": "vpc-live-private-us-east-1a"
            },
            "vpc_id": "vpc-09d9a016647d2814c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:406951616480:subnet/subnet-05a8afa32fc346d01",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05a8afa32fc346d01",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "406951616480",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-live-private-us-east-1b"
            },
            "tags_all": {
              "Name": "vpc-live-private-us-east-1b"
            },
            "vpc_id": "vpc-09d9a016647d2814c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:406951616480:subnet/subnet-0b44d22f2087c94ab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b44d22f2087c94ab",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "406951616480",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-live-private-us-east-1c"
            },
            "tags_all": {
              "Name": "vpc-live-private-us-east-1c"
            },
            "vpc_id": "vpc-09d9a016647d2814c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:406951616480:subnet/subnet-024dc68697c6aabbe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-024dc68697c6aabbe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "406951616480",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-live-public-us-east-1a"
            },
            "tags_all": {
              "Name": "vpc-live-public-us-east-1a"
            },
            "vpc_id": "vpc-09d9a016647d2814c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:406951616480:subnet/subnet-02b82cca4b2178f54",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02b82cca4b2178f54",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "406951616480",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-live-public-us-east-1b"
            },
            "tags_all": {
              "Name": "vpc-live-public-us-east-1b"
            },
            "vpc_id": "vpc-09d9a016647d2814c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:406951616480:subnet/subnet-0260949cee50b5196",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0260949cee50b5196",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "406951616480",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-live-public-us-east-1c"
            },
            "tags_all": {
              "Name": "vpc-live-public-us-east-1c"
            },
            "vpc_id": "vpc-09d9a016647d2814c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:406951616480:vpc/vpc-09d9a016647d2814c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ca19af6ead6183b5",
            "default_route_table_id": "rtb-06bfac3e385621c64",
            "default_security_group_id": "sg-036d6537b2e25f3f6",
            "dhcp_options_id": "dopt-03e3afef4aa78abff",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09d9a016647d2814c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06bfac3e385621c64",
            "owner_id": "406951616480",
            "tags": {
              "Name": "vpc-live"
            },
            "tags_all": {
              "Name": "vpc-live"
            }
          }
        }
      ]
    }
  ]
}